# design.patterns.Gof

./: README.md  compile.txt
Behavioural Patterns/: README.md
Behavioural Patterns/Chain-of-responsibility/: Base.hpp  CMakeLists.txt  HandlerA.hpp  HandlerB.hpp  README.md  main.cpp
Behavioural Patterns/Command/: CMakeLists.txt  ICommand.hpp  OpenDoor.hpp  OpenWindow.hpp  README.md  WorkerHandler.hpp  main.cpp
Behavioural Patterns/Interpreter/: CMakeLists.txt  Context.hpp  ExpressionBase.hpp  NonTerminalExpression.hpp  README.md  TerminalExpression.hpp  main.cpp
Behavioural Patterns/Iterator/: AggregatorBase.hpp  CMakeLists.txt  ConcreteAggregator.cpp  ConcreteAggregator.hpp  ConcreteIterator.cpp  ConcreteIterator.hpp  IteratorBase.hpp  README.md  main.cpp
Behavioural Patterns/Mediator/: CMakeLists.txt  Edit.hpp  FileSelectionDialog.cpp  FileSelectionDialog.hpp  List.hpp  README.md  Widget.cpp  Widget.hpp  main.cpp
Behavioural Patterns/Memento/: Book.cpp  Book.hpp  CMakeLists.txt  Caretaker.cpp  Caretaker.hpp  Memento.cpp  Memento.hpp  README.md  main.cpp
Behavioural Patterns/Observer/: CMakeLists.txt  Observer.hpp  README.md  SomeMachine.cpp  SomeMachine.hpp  View.cpp  View.hpp  main.cpp
Behavioural Patterns/State/: CMakeLists.txt  Machine.cpp  Machine.hpp  OFF.cpp  OFF.hpp  ON.cpp  ON.hpp  README.md  State.cpp  State.hpp  main.cpp
Behavioural Patterns/Strategy/: AlgorithmBubbleSort.cpp  AlgorithmBubbleSort.hpp  AlgorithmQuickSort.cpp  AlgorithmQuickSort.hpp  CMakeLists.txt  Client.hpp  README.md  Strategy.hpp  main.cpp
Behavioural Patterns/TemplateMethod/: AlgorithmBubbleSort.cpp  AlgorithmBubbleSort.hpp  AlgorithmQuickSort.cpp  AlgorithmQuickSort.hpp  (+5 more)
Creational Patterns/: README.md
Creational Patterns/Prototype/: CMakeLists.txt  Document.hpp  OdtDocument.hpp  README.md  TxtDocument.hpp  main.cpp
MVVM-level1/: MVVM-level1.sln
Structural Patterns/: README.md
Structural Patterns/Facade_cpp/: CMakeLists.txt  Facade.hpp  README.md  SubSystem01.hpp  SubSystem02.hpp  main.cpp
(+110 files in other folders)
